--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 <head>
 	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8" />
 	<script src="src/index.js" defer></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="src/styles.css" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
