--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body id="body-text">
 	<nav class="navbar">
   <div class="container-fluid">
-      <form action="#">
+      <form action="">
         <input type="text" id="input-show">
         <button id="submit-data">Submit</button>
       </form>
