--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Parcel Sandbox</title>
+    <title>Week4</title>
     <meta charset="UTF-8" />
     <script src="src/index.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
