--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body id="body-text">
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
-        <form action="">
+        <form action="#">
           <input type="text" id="input-show" />
           <button id="submit-data">Submit</button>
         </form>
