--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   <body id="body-text">
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
-        <form action="#">
+        <form action="" method="GET">
           <input type="text" id="input-show" />
-          <button id="submit-data">Submit</button>
         </form>
+        <button id="submit-data">Submit</button>
       </div>
     </nav>
   </body>
