--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <body id="body-text">
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
-        <form action="#" method="GET">
+        <form action="" method="GET">
           <input type="text" id="input-show" />
-          <button id="submit-data">Submit</button>
+          <button type="button" id="submit-data">Submit</button>
         </form>
       </div>
     </nav>
